src/validation/tests/snapshots/rusty__validation__tests__variable_validation_tests__overflows__overflows_with_not.snap
---
source: src/validation/tests/variable_validation_tests.rs
expression: diagnostics
---
error: This will overflow for type UINT
  ┌─ <internal>:4:25
  │
4 │             y : UINT := NOT -1234;  // Not OK (because of -1234)
  │                         ^^^^^^^^^ This will overflow for type UINT


